# dragonTTS

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  nxt_steps.md  pyproject.toml  smoke_live.py
app/: __init__.py  main.py
app/api/v1/: cache.py  health.py  tts.py
app/audio/: format.py  resample.py
app/cache/: key.py  metrics.py  resilience.py  segment.py  service.py  tracker.py
app/core/: config.py  logging.py
app/providers/: base.py  cartesia.py  cartesia_pool.py  elevenlabs.py  elevenlabs_pool.py  gemini.py  registry.py  sarvam.py  sarvam_pool.py
app/schemas/: cache.py  tts.py
app/storage/: base.py  filesystem.py  sqlite.py
deploy/k8s/: deployment.yaml  pvc.yaml  service.yaml
scripts/: local_smoke.sh  warm_telugu.py
tests/: conftest.py  e2e_mock_cache.py  mock_elevenlabs.py  test_api.py  test_api_extras.py  test_cache_service.py  test_cartesia_pool.py  test_concurrency.py  test_elevenlabs_pool.py  test_key.py  test_providers_stream.py  test_release_fixes.py  test_resample.py  test_review_fixes.py  test_sarvam_pool.py  test_segment.py  test_stream_singleflight.py  test_streaming.py  test_tracker.py  test_write_behind_metrics.py  verify_real_cache_db.py
