[project]
name = "dragontts"
version = "0.1.0"
description = "DragonTTS — caching TTS proxy compatible with clairvoyance providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "google-cloud-texttospeech>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
